Added google api key

--- a/contact.html
+++ b/contact.html
@@ -264,5 +264,7 @@ better User Interface &amp; Experience.</h3>
     <script type="text/javascript" src="assets/js/custom.js"></script>
     <script type="text/javascript" src="assets/js/contact.js"></script>
     <script type="text/javascript" src="assets/js/google_map.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDg7USv3c3IhBCW0BYE0aqDemL1IiRVfyE&callback=initMap"
+  type="text/javascript"></script>
   </body>
 </html>
