Changed images, fixed styling, added modals

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <!-- BEGIN IMAGE PARRALAX -->
               <div class="slider-wrapper">
                 <div class="image" data-swiper-parallax="30%">
-                  <div data-pages-bg-image="assets/images/desktop.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
+                  <div data-pages-bg-image="assets/images/laptop.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
                 </div>
               </div>
               <!-- END IMAGE PARRALAX -->
@@ -124,7 +124,7 @@
                 <div class="inner full-height">
                   <div class="container-xs-height full-height">
                     <div class="col-xs-height col-middle text-left">
-                      <div class="container text-center">
+                      <div class="container text-center" style="text-shadow: 1px 1px black">
                         <h6 class="block-title m-b-0 text-white">
                           Discover
                         </h6>
@@ -323,7 +323,7 @@
       </div>
     </section>
     <!-- END CONTENT SECTION -->
-    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/table.jpg">
+    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/back.jpg">
       </section>
     <!-- BEGIN CONTENT SECTION -->
     <section class="p-b-50 p-t-50 bg-master-darkest">
@@ -333,10 +333,10 @@
             <div class="text-center">
               <h1 class="text-white col-sm-12 p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
               <ul class="text-white m-r-40">
-                <li class="inline"><a href="#" class="text-white"><i class="fa fa-4x fa-facebook"></i></a></li>
-                <li class="inline"><a href="#" class="text-white p-l-40"><i class="fa fa-4x fa-twitter"></i></a></li>
-                <li class="inline"><a href="#" class="text-white p-l-40"><i class="fa fa-4x fa-rss"></i></a></li>
-                <li class="inline"><a href="#" class="text-white p-l-40"><i class="fa fa-4x fa-linkedin"></i></a></li>
+                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x"></i></li>
+                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x"></i></a></li>
+                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x"></i></a></li>
+                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-40"><i class="social-icon fa fa-github fa-4x"></i></a></li>
               </ul>
             </div>
           </div>
