--- a/contact.html
+++ b/contact.html
@@ -102,11 +102,11 @@
           <div class="col-md-6">
             <h2>Want to work together?</h2>
             <div class="p-r-40 sm-p-r-0">
-              <p>Despite the UI, We thought of the User experience, With attached From Layouts you can simply categories Important fields and prioritize them.</p>
+              <p>Although my homebase is in South Florida, I'm open to relocating. If the opportunity seems right, I would love to join a team that will have a positive impact on the world.  If you just want to get more info or see if I can help you with a project, feel free to reach out as well! </p>
               <br>
               <br>
               <div class="panel" id="contact-panel">
-                <p class="semi-bold no-margin">Fill up this form to contact us if you have any futher questions</p>
+                <p class="semi-bold no-margin">Fill up this form to contact me if you have any futher questions.</p>
                 <form role="form" autocomplete="off" class="m-t-15" id="contact-form" action="_lib/mail.php" method="post">
                   <div class="row">
                     <div class="col-sm-6">
@@ -132,7 +132,7 @@
                   </div>
                   <div class="sm-p-t-10 clearfix">
                     <p class="pull-left small hint-text m-t-5 font-arial">I hereby certify that the information above is true and accurate. </p>
-                    <button class="btn btn-primary font-montserrat all-caps fs-12 pull-right xs-pull-left">Submit</button>
+                    <button class="btn btn-default font-montserrat all-caps fs-12 pull-right xs-pull-left">Submit</button>
                   </div>
                   <div class="clearfix"></div>
                 </form>
@@ -143,41 +143,30 @@
             <div class="visible-xs visible-sm b-b b-grey-light m-t-35 m-b-30"></div>
             <div class="p-l-40 sm-p-l-0 sm-p-t-10">
               <h3>Showcase and guide users with a <br>
-better User Interface &amp; Experience.</h3>
-              <p>Our motivation "Perfection simplified" helps to craft meaningful experiences for the people around us,This mission inspires us to jump out of bed each day and guides every aspect of what we do.</p>
+beautiful front-end &amp; usable back-end.</h3>
+              <p>My motivation is to put together something that will tell a living story through the details and usability. This mission inspires me to jump out of bed each day.</p>
               <br>
               <div class="row">
                 <div class="col-sm-6">
-                  <h5 class="block-title hint-text m-b-0">california </h5>
-                  <address class="m-t-10">Stanford co.
-                                <br> 54 E Pear St
-                                <br> Oklahoma city OK 73102</address>
-                  <br>
-                  <p class="hint-text no-margin"><span class="fs-12 font-montserrat bold all-caps p-r-10">Tel</span> <span class="fs-14">(877) 412-7766</span></p>
-                  <p class="hint-text"><span class="fs-12 font-montserrat bold all-caps p-r-10">Fax</span> <span class="fs-14">(877) 412-7766</span></p>
+                  <h5 class="block-title hint-text m-b-0">Phone</h5>
+                  <address class="m-t-15">Feel free to send me
+                                          <br>a text or give me a call.</address>
+                  <p class="hint-text m-t-20"><span class="fs-14 bold">(954) 478-0102</span></p>
                 </div>
                 <div class="col-sm-6">
-                  <h5 class="block-title hint-text m-b-0">canada </h5>
-                  <address class="m-t-10">Station 322
-                                <br> Ottawa Ontario K1AOB1
-                                <br> Canada.
-                            </address>
-                  <br>
-                  <p class="hint-text no-margin"><span class="fs-12 font-montserrat bold all-caps p-r-10">Tel</span> <span class="fs-14">(877) 412-7766</span></p>
-                  <p class="hint-text"><span class="fs-12 font-montserrat bold all-caps p-r-10">Fax</span> <span class="fs-14">(877) 412-7766</span></p>
-                </div>
-              </div>
-              <br>
-              <h5 class="block-title hint-text m-b-0">pages Public Inquiries &amp; Communications </h5>
-              <br>
-              <div class="row">
-                <div class="col-sm-6">
-                  <p class="fs-12 font-montserrat bold all-caps no-margin hint-text">Hotline </p>
-                  <p class="hint-text no-margin fs-14">(877) 412-7766</p>
+                  <h5 class="block-title hint-text m-b-0">Email</h5>
+                  <br><h5 class="m-t-10"><a href="mailto:alfredo.i.urdaneta@gmail.com"><i class="social-icon fa fa-envelope fa-4x"></i>
+                            </h5>
                 </div>
                 <div class="col-sm-6">
-                  <p class="fs-12 font-montserrat bold all-caps no-margin hint-text">Email </p>
-                  <p class="hint-text no-margin fs-14">support@revox.io</p>
+                  <h5 class="block-title hint-text m-t-35 m-b-0">Linkedin</h5>
+                  <br><h5 class="m-t-15"><a href="http://www.linkedin.com/in/alfredourdaneta"><i class="social-icon fa fa-linkedin fa-4x"></i></a>
+                            </h5>
+                </div>
+                <div class="col-sm-6">
+                  <h5 class="block-title hint-text m-t-35 m-b-0">Angel List</h5>
+                  <br><h5 class="m-t-15"><a href="http://www.angel.co/alfredourdaneta"><i class="social-icon fa fa-angellist fa-4x"></i></a>
+                            </h5>
                 </div>
               </div>
             </div>
@@ -223,20 +212,11 @@ better User Interface &amp; Experience.</h3>
           </div>
           <div class="container-fluid">
             <div class="inline-block bottom-right m-b-30">
-              <div class="checkbox right">
-                <input id="checkboxn" type="checkbox" value="1" checked="checked">
-                <label for="checkboxn">Search within page</label>
-              </div>
             </div>
           </div>
           <div class="container-xs-height full-height">
             <div class="col-xs-height col-middle text-center">
               <!-- BEGIN Overlay Controls !-->
-              <input id="overlay-search" class="no-border overlay-search bg-transparent col-sm-6 col-sm-offset-4" placeholder="Search..." autocomplete="off" spellcheck="false">
-              <br>
-              <div class="inline-block bottom-left m-l-10 m-b-30 hidden-xs">
-                <p class="fs-14"><i class="fa fa-search m-r-10"></i> Press enter to search</p>
-              </div>
               <!-- END Overlay Controls !-->
             </div>
           </div>
