Added favicon and changed content

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h2 class="light text-black">
               A different type of <span class="font-montserrat text-uppercase" data-pages-init="text-rotate" data-speed="1400 " data-animation="fade"> Design, Work, Look, Feel, Style</span> .
             </h2>
-            <p class="m-t-20">My inspiration comes from creation.  Creation has the power to change lives. As a driven-intellectual, I aspire by doing and seeing things. I originally took up coding as a hobby, but I decided to make it my career. It's a common occurrence to catch myself lost in code through the early AM. Through passion and dedication, I've managed to go from a self-taught web designer, to having the ability to create beautiful yet complex web applications. I believe that you can be inspired by small detail and the detail itself can tell a story. I aspire to tell a story through my details. 
+            <p class="m-t-20">My inspiration comes from creation.  Creation has the power to change lives. As a driven-intellectual, I aspire by doing and seeing things. I originally took up coding as a hobby, but I decided to make it my career. Through passion, dedication, and education, I've managed to go from a self-taught web designer, to having the ability to create beautiful yet complex web applications. I believe that you can be inspired by small detail and the detail itself can tell a story. I aspire to tell a story through my details. 
             </p>
           </div>
         </div>
@@ -301,19 +301,19 @@
                 <div class="p-t-30">
                   <dl>
                     <dt class="block-title p-b-15 text-black">Idea <i class="fa fa-lightbulb-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">It starts with an idea. I spend my days thinking of new technologies that could make life easier. Once I have a basic outline of how I can solve this problem, I start planning. I like to create an ideal design blueprint for what I will be creating.</dd>
+                    <dd class="m-b-30">It starts with an idea. I spend my days thinking of new technologies that could make life easier. Once I have a basic outline of how I can solve a certain problem, I start planning. I like to create an ideal design blueprint for what I will be creating.</dd>
                   </dl>
                   <dl>
                     <dt class="block-title p-b-15 text-black">Develop <i class="fa fa-code fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">Once I have a clear design mocked up, it is time to start coding. I start by creating and testing all my back-end features to make sure the base of my application will work. Back-end frameworks like Ruby on Rails or Node allow for a broad range of data customization, user interface, and dynamic content generation. Front-end frameworks like Bootstrap and React help the development stage be more efficient and more functional than ever before. It is an ongoing process, with new technologies to learn coming out every day.</dd>
+                    <dd class="m-b-30">Once I have a clear design mocked up, it is time to start coding. I start by creating all my basic features to make sure the base of my application will work. Back-end frameworks like Ruby on Rails or Node allow for a broad range of data customization, user interface, and dynamic content generation. Front-end frameworks like Bootstrap and React help the development stage be more efficient and more functional than ever before. It is an ongoing process, with new technologies to learn coming out every day.</dd>
                   </dl>
                   <dl>
                     <dt class="block-title text-black p-b-15 ">Launch <i class="fa fa-paper-plane-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">Once the design and development of the project is near completion it is time to deploy the project. During this stage is when I push projects live on a web server or a service like Heroku to get it on the web for the first time. The testing during this stage is much more hands on, being able to see any bugs that may come into play on the web servers. Once all is considered and revisions have been implemented I can finally push out version 1.0.</dd>
+                    <dd class="m-b-30">Once the design and development of the project is near completion, it is time to deploy the project. During this stage, I push projects live on a web server or a service like Heroku to get it on the web. The testing during this stage is much more hands on, being able to see any bugs that may come into play once online. Once all is considered and revisions have been implemented I can finally push out version 1.0.</dd>
                   </dl>
                   <dl>
                     <dt class="block-title text-black p-b-15 ">Finish <i class="fa fa-check-square-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">The best stage during the whole process is finishing what I like to think of as the final product. It's important to incorporate project management into the whole project to be able to plan and complete on time. There's nothing like seeing my initially vague idea become reality. It makes the whole process worth it. I strive to deliver the best product I can, with thoughtful design, bug free development, and extensive iterations to cater to all sorts of users. </dd>
+                    <dd class="m-b-30">The best stage during the whole process is finishing what I like to think of as the final product. There's nothing like seeing my initially vague idea become reality. It makes the whole process worth it. I strive to deliver the best product I can, with thoughtful design, bug free development, and extensive iterations to cater to all sorts of users. </dd>
                   </dl>
                 </div>
               </div>
@@ -331,8 +331,8 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle text-center">
             <div class="text-center">
-              <h1 class="text-white col-sm-12 p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
-              <ul class="text-white m-r-40">
+              <h1 class="text-white col-sm-12 p-b-80 m-l-30">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
+              <ul class="text-white m-l-10">
                 <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x"></i></li>
                 <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x"></i></a></li>
                 <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x"></i></a></li>
@@ -372,22 +372,9 @@
             </a>
             <!-- END Overlay Close !-->
           </div>
-          <div class="container-fluid">
-            <div class="inline-block bottom-right m-b-30">
-              <div class="checkbox right">
-                <input id="checkboxn" type="checkbox" value="1" checked="checked">
-                <label for="checkboxn">Search within page</label>
-              </div>
-            </div>
-          </div>
           <div class="container-xs-height full-height">
             <div class="col-xs-height col-middle text-center">
               <!-- BEGIN Overlay Controls !-->
-              <input id="overlay-search" class="no-border overlay-search bg-transparent col-sm-6 col-sm-offset-4" placeholder="Search..." autocomplete="off" spellcheck="false">
-              <br>
-              <div class="inline-block bottom-left m-l-10 m-b-30 hidden-xs">
-                <p class="fs-14"><i class="fa fa-search m-r-10"></i> Press enter to search</p>
-              </div>
               <!-- END Overlay Controls !-->
             </div>
           </div>
