Updated portfolio items

--- a/contact.html
+++ b/contact.html
@@ -108,13 +108,13 @@
                     <div class="col-sm-6">
                       <div class="form-group form-group-default required">
                         <label class="control-label">First name</label>
-                        <input type="text" name="name" class="form-control" required>
+                        <input type="text" name="first_name" class="form-control" required>
                       </div>
                     </div>
                     <div class="col-sm-6">
                       <div class="form-group form-group-default">
                         <label class="control-label">Last name</label>
-                        <input type="text" name="last-name" class="form-control" required>
+                        <input type="text" name="last_name" class="form-control" required>
                       </div>
                     </div>
                   </div>
