Updated portfolio item

--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@
                               <li>AWS-Database</li>
                               <li>ActionCable</li>
                           </ul>
-                          <a href="http://www.alfredourdaneta.com/"><button type="button" class="btn btn-primary m-t-10">View Live!</button></a>
+                          <a href="https://alfredosportfolio.herokuapp.com/"><button type="button" class="btn btn-primary m-t-10">View Live!</button></a>
                       </div>
                   </div>
               </div>
