--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
               <br>
               <br>
               <div class="panel" id="contact-panel">
-                <p class="semi-bold no-margin">Fill up this form to contact me if you have any futher questions.</p>
-                <form role="form" autocomplete="off" class="m-t-15" id="contact-form" action="_lib/mail.php" method="POST">
+                <p class="semi-bold no-margin">Fill up this form to contact us if you have any futher questions</p>
+                <form role="form" autocomplete="off" class="m-t-15" id="contact-form" action="_lib/mail.php" method="post">
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="form-group form-group-default required">
@@ -128,10 +128,9 @@
                   </div>
                   <div class="sm-p-t-10 clearfix">
                     <p class="pull-left small hint-text m-t-5 font-arial">I hereby certify that the information above is true and accurate. </p>
-                    <input id="submit" name="submit" type="submit" value="Send" class="btn btn-default font-montserrat all-caps fs-12 pull-right xs-pull-left">
+                    <button class="btn btn-primary font-montserrat all-caps fs-12 pull-right xs-pull-left">Submit</button>
                   </div>
                   <div class="clearfix"></div>
-                </form>
                 </form>
               </div>
             </div>
@@ -226,6 +225,7 @@ beautiful front-end &amp; usable back-end.</h3>
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/jquery/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <!-- BEGIN SWIPER DEPENDENCIES -->
     <script type="text/javascript" src="assets/plugins/swiper/js/swiper.jquery.min.js"></script>
