--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- BEGIN HEADER -->
     <nav class="header bottom bg-header light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left" data-pages-bg-image="assets/images/brush_stroke.png"></div>
+      <div class="demo-brush bottom-left m-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
@@ -94,8 +94,6 @@
             </ul>
             <!-- BEGIN COPYRIGHT FOR MOBILE -->
             <div class="font-arial m-l-35 m-r-35 m-b-20 m-t-20 visible-sm visible-xs">
-              <p class="fs-11 no-margin small-text p-b-20">Exclusive only at ,Themeforest. See Standard licenses & Extended licenses
-              </p>
               <p class="fs-11 small-text muted">Copyright &copy; 2017 Alfredo Urdaneta.</p>
             </div>
             <!-- END COPYRIGHT FOR MOBILE -->
@@ -115,7 +113,7 @@
               <!-- BEGIN IMAGE PARRALAX -->
               <div class="slider-wrapper">
                 <div class="image" data-swiper-parallax="30%">
-                  <div data-pages-bg-image="assets/images/laptop.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
+                  <div data-pages-bg-image="assets/images/home_bg.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
                 </div>
               </div>
               <!-- END IMAGE PARRALAX -->
@@ -125,12 +123,13 @@
                   <div class="container-xs-height full-height">
                     <div class="col-xs-height col-middle text-left">
                       <div class="container text-center" style="text-shadow: 1px 1px black">
-                        <h6 class="block-title m-b-0 text-white">
-                          Discover
-                        </h6>
                         <h1 class="m-t-5 text-white">
-                          <strong>Full-Stack.</strong>
+                          <strong>I'm Alfredo.</strong>
                         </h1>
+                        <i class="fa fa-arrow-down text-white m-t-20" aria-hidden="true"></i>
+                        <h6 class="block-title m-b-0 text-white">
+                          Learn More About Me
+                        </h6>
                       </div>
                     </div>
                   </div>
@@ -146,7 +145,7 @@
     </section>
     <!-- END JUMBOTRON -->
     <!-- BEGIN INTRO CONTENT -->
-    <section id="launch" class="p-b-60 p-t-60 no-overflow relative" style="min-height:730px">
+    <section id="launch" class="p-b-60 p-t-60 no-overflow relative" style="min-height:820px">
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
@@ -158,7 +157,7 @@
             </p>
           </div>
         </div>
-        <img class="m-t-30" src="assets/images/arrow_down_2.png" alt="">
+        <img class="m-b-20" src="assets/images/arrow_down_2.png" alt="">
       </div>
       <img class="demo-handbook lazy" data-pages="float" src="assets/images/handbook.jpg" alt="" data-max-top-translate="40" data-max-bottom-translate="300" data-speed="-0.1" data-delay="1000" data-curve="ease">
     </section>
@@ -331,8 +330,8 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle text-center">
             <div class="text-center">
-              <h1 class="text-white col-sm-12 p-b-80 m-l-30">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
-              <ul class="text-white m-l-10">
+              <h1 class="text-white text-center col-sm-12 p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
+              <ul class="text-white text-center">
                 <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x"></i></li>
                 <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x"></i></a></li>
                 <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x"></i></a></li>
