Changed margins for mobile view

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </section>
     <!-- BEGIN JUMBOTRON -->
     <!-- BEGIN HEADER -->
-    <nav class="header bottom bg-header light-solid" data-pages="header" data-pages-autofixed="true">
+    <nav class="header bottom bg-header m-b-0 p-b-0 light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left m-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
+      <div class="demo-brush bottom-left m-b-0 p-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
