Fixed margin for header bottom

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- BEGIN HEADER -->
     <nav class="header bottom bg-header m-b-0 p-b-0 light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left m-b-0 p-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
+      <div class="demo-brush bottom-left pull-bottom m-b-0 p-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
@@ -127,7 +127,7 @@
                           <strong>I'm Alfredo.</strong>
                         </h1>
                         <i class="fa fa-arrow-down text-white m-t-20" aria-hidden="true"></i>
-                        <h6 class="block-title m-b-0 text-white">
+                        <h6 class="block-title p-b-20 text-white">
                           Learn More About Me
                         </h6>
                       </div>
