Playing with margins for heroku mobile view

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- BEGIN HEADER -->
     <nav class="header bottom bg-header m-b-0 p-b-0 light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left pull-bottom m-b-0 p-b-0" data-pages-bg-image="assets/images/brush_stroke.png"></div>
+      <div class="demo-brush bottom-left pull-bottom m-b-0 p-b-0 p-t-20" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
@@ -54,7 +54,6 @@
         </div>
         <div class="pull-right">
           <div class="header-inner">
-            <a href="#" data-toggle="search" class="search-toggle visible-sm-inline visible-xs-inline p-r-10"><i class="fs-14 pg-search"></i></a>
             <div class="visible-sm-inline visible-xs-inline menu-toggler pull-right p-l-10" data-pages="header-toggle" data-pages-element="#header">
               <div class="one"></div>
               <div class="two"></div>
@@ -357,31 +356,6 @@
       </div>
     </section>
     <!-- END FOOTER -->
-    <!-- START OVERLAY SEARCH -->
-    <div class="overlay hide" data-pages="search">
-      <!-- BEGIN Overlay Content !-->
-      <div class="overlay-content full-height has-results">
-        <!-- END Overlay Header !-->
-        <div class="container relative full-height">
-          <!-- BEGIN Overlay Header !-->
-          <div class="container-fluid">
-            <!-- BEGIN Overlay Close !-->
-            <a href="#" class="close-icon-light overlay-close text-black fs-16 top-right">
-              <i class="pg-close_line"></i>
-            </a>
-            <!-- END Overlay Close !-->
-          </div>
-          <div class="container-xs-height full-height">
-            <div class="col-xs-height col-middle text-center">
-              <!-- BEGIN Overlay Controls !-->
-              <!-- END Overlay Controls !-->
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- END Overlay Content !-->
-    </div>
-    <!-- END OVERLAY SEARCH -->
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
     <!-- BEGIN CORE FRAMEWORK -->
