--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                           <strong>I'm Alfredo.</strong>
                         </h1>
                         <i class="fa fa-arrow-down text-white m-t-20" aria-hidden="true"></i>
-                        <h6 class="block-title p-b-20 text-white">
+                        <h6 class="block-title p-b-30 text-white">
                           Learn More About Me
                         </h6>
                       </div>
@@ -144,19 +144,18 @@
     </section>
     <!-- END JUMBOTRON -->
     <!-- BEGIN INTRO CONTENT -->
-    <section id="launch" class="p-b-60 p-t-60 no-overflow relative" style="min-height:820px">
+    <section id="launch" class="p-b-40 p-t-60 no-overflow relative" style="height: 860px;">
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h6 class="block-title m-b-0 ">This Is Me</h6>
             <h2 class="light text-black">
-              A different type of <span class="font-montserrat text-uppercase" data-pages-init="text-rotate" data-speed="1400 " data-animation="fade"> Design, Work, Look, Feel, Style</span> .
+              I've always been a <span class="font-montserrat text-uppercase" data-pages-init="text-rotate" data-speed="1400 " data-animation="fade"> Builder, Dreamer, Innovator, Leader, </span> .
             </h2>
             <p class="m-t-20">My inspiration comes from creation.  Creation has the power to change lives. As a driven-intellectual, I aspire by doing and seeing things. I originally took up coding as a hobby, but I decided to make it my career. Through passion, dedication, and education, I've managed to go from a self-taught web designer, to having the ability to create beautiful yet complex web applications. I believe that you can be inspired by small detail and the detail itself can tell a story. I aspire to tell a story through my details. 
             </p>
           </div>
         </div>
-        <img class="m-b-20" src="assets/images/arrow_down_2.png" alt="">
+        <img class="m-t-15 m-b-15" src="assets/images/arrow_down_2.png" alt="">
       </div>
       <img class="demo-handbook lazy" data-pages="float" src="assets/images/handbook.jpg" alt="" data-max-top-translate="40" data-max-bottom-translate="300" data-speed="-0.1" data-delay="1000" data-curve="ease">
     </section>
@@ -321,20 +320,20 @@
       </div>
     </section>
     <!-- END CONTENT SECTION -->
-    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/back.jpg">
+    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg">
       </section>
     <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-50 p-t-50 bg-master-darkest">
+    <section class="p-b-50 p-t-50" style="background-color: yellow;">
       <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle text-center">
-            <div class="text-center">
-              <h1 class="text-white text-center col-sm-12 p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
-              <ul class="text-white text-center">
-                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x"></i></li>
-                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x"></i></a></li>
-                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x"></i></a></li>
-                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-40"><i class="social-icon fa fa-github fa-4x"></i></a></li>
+            <div class="text-center" style="text-shadow: 2px 2px grey">
+              <h1 class="text-white text-center p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
+              <ul class="text-white text-center p-l-20">
+                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x" style="text-shadow: 2px 2px grey"></i></li>
+                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
+                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
+                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-40"><i class="social-icon fa fa-github fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
               </ul>
             </div>
           </div>
