Added new style to index and changed setup

--- a/index.html
+++ b/index.html
@@ -79,16 +79,22 @@
                           </a>
               </li>
               <li>
+                <a href="index.html" data-text="Home">My Skills 
+                            <span data-text="Welcome">Technical</span>
+                          </a>
+              </li>
+              <li>
+                <a href="index.html" data-text="Home">About Me 
+                            <span data-text="Welcome">See more</span>
+                          </a>
+              </li>
+              <li>
                 <a href="portfolio.html" data-text="Portofolio">Portfolio 
                             <span data-text="Clients">Work</span></a>
               </li>
               <li>
                 <a href="contact.html" data-text="Contact Us">Contact Me
                             <span data-text="Get in touch">Get in touch </span></a>
-              </li>
-              <li>
-                <a href="" data-text="Blog">Blog
-                            <span data-text="Posts">Posts </span></a>
               </li>
             </ul>
             <!-- BEGIN COPYRIGHT FOR MOBILE -->
@@ -121,14 +127,14 @@
                 <div class="inner full-height">
                   <div class="container-xs-height full-height">
                     <div class="col-xs-height col-middle text-left">
-                      <div class="container text-center" style="text-shadow: 1px 1px black">
+                      <div class="container text-center" style="text-shadow: 1px 1px black;">
                         <h1 class="m-t-5 text-white">
-                          <strong>I'm Alfredo.</strong>
+                          <strong>Full-Stack Developer</strong>
                         </h1>
-                        <i class="fa fa-arrow-down text-white m-t-20" aria-hidden="true"></i>
-                        <h6 class="block-title p-b-30 text-white">
-                          Learn More About Me
-                        </h6>
+                        <h4 class="p-b-5 text-white">
+                          <strong>Learn more about me!</strong>
+                        </h4>
+                        <i class="fa fa-arrow-down text-white m-t-10" aria-hidden="true"></i>
                       </div>
                     </div>
                   </div>
@@ -149,186 +155,48 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <h2 class="light text-black">
-              I've always been a <span class="font-montserrat text-uppercase" data-pages-init="text-rotate" data-speed="1400 " data-animation="fade"> Builder, Dreamer, Innovator, Leader, </span> .
+              I've always been a <span class="font-montserrat text-uppercase" data-pages-init="text-rotate" data-speed="1400 " data-animation="fade"> Builder, Creator, Dreamer, Leader </span> .
             </h2>
-            <p class="m-t-20">My inspiration comes from creation.  Creation has the power to change lives. As a driven-intellectual, I aspire by doing and seeing things. I originally took up coding as a hobby, but I decided to make it my career. Through passion, dedication, and education, I've managed to go from a self-taught web designer, to having the ability to create beautiful yet complex web applications. I believe that you can be inspired by small detail and the detail itself can tell a story. I aspire to tell a story through my details. 
+            <p class="m-t-20">I'm a driven-intellectual. I aspire by doing and seeing things. I originally took up coding as a hobby, but I decided to make it my career. Through passion, dedication, and education, I've managed to go from a self-taught web designer, to having the ability to create beautiful yet complex web applications. I believe that you can be inspired by small detail and the detail itself can tell a story. I aspire to tell a story through my details. 
             </p>
           </div>
         </div>
         <img class="m-t-15 m-b-15" src="assets/images/arrow_down_2.png" alt="">
       </div>
-      <img class="demo-handbook lazy" data-pages="float" src="assets/images/handbook.jpg" alt="" data-max-top-translate="40" data-max-bottom-translate="300" data-speed="-0.1" data-delay="1000" data-curve="ease">
+      <div class="content-mask-md p-t-80">
+        <div class="device_morph pull-center-inner" id="iphone01">
+          <img alt="" class="xs-image-responsive-height image-responsive-width" src="assets/images/b_phone.png" id="mobile_phone">
+          <div class="screen">
+            <div class="iphone-border">
+              <img src="assets/images/sign.png" class="lazy image-responsive-height" alt="" data-pages="float">
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- END INTRO CONTENT -->
-    <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-65 p-t-60 bg-master-dark">
-      <div class="container">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-          <div class="text-center">
-            <h5 class="block-title text-white no-margin">My Skills </h5>
-            <h1 class="text-white col-sm-12 m-t-5 m-b-30">Always Learning.</h1>
-          </div>
-          <div class="row m-t-30">
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="95%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            Ruby On Rails
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="95">0</span>%
-              </p>
-              <p></p>
+    <section class="bg-white relative full-width p-t-100 p-b-100 bg-position-top-center bg-size-reset xs-bg-size-cover" data-pages="parallax" data-pages-bg-image="assets/images/mount_phone.jpg">
+      <div class="container m-t-50">
+        <div class="md-p-l-20 md-p-r-20 m-b-20 xs-no-padding">
+          <div class="row p-t-85">
+            <div class="col-sm-7 ">
             </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="85%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            Javascript
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="85">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="79%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            React
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="65%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            Redux
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="65">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="65%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            Node
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="65">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="90%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            UX/UI
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="90">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="75%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            SQL
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
-              </p>
-              <p></p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small transparent-white m-t-15">
-                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="90%"></div>
-              </div>
-              <h3 class="no-margin text-white">
-                            Git
-                        </h3>
-              <p class="font-arial hint-text fs-12 text-white">
-                <span data-animation-duration="800" data-pages-animate="number" data-value="90">0</span>%
-              </p>
-              <p></p>
+            <div class="col-sm-5 col-md-4 sm-text-right">
+              <h5 class="block-title hint-text no-margin">My Inspiration is Creation.</h5>
+              <h1 class="m-t-5">Creation has the power to change lives.</h1>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- END CONTENT SECTION -->
-    <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-85 p-t-75 bg-master-lighter">
-      <div class="container">
-        <div class="md-p-l-20 xs-no-padding clearfix">
-          <div class="row visible-sm">
-            <div class="col-sm-8 m-b-40">
-              <h2>The Process. Creativity, thoughtful-planning, time and effort, and creation.</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="clearfix hidden-sm text-center m-b-30">
-              <h1>The Process.</h1>
-            </div>
-            <div class="col-md-4 col-sm-4 p-t-100">
-              <div class="device_morph" data-pages="auto-scroll">
-                <img alt="" class="xs-image-responsive-height image-responsive-width" src="assets/images/b_phone.png" id="mobile_phone">
-                <div class="screen">
-                  <div class="iphone-border">
-                    <img src="assets/images/mobile.png" class="image-responsive-height lazy" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-7 col-md-offset-1  col-sm-offset-2 col-sm-6">
-              <div class="col-md-9 col-md-offset-1 col-sm-11">
-                <div class="p-t-30">
-                  <dl>
-                    <dt class="block-title p-b-15 text-black">Idea <i class="fa fa-lightbulb-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">It starts with an idea. I spend my days thinking of new technologies that could make life easier. Once I have a basic outline of how I can solve a certain problem, I start planning. I like to create an ideal design blueprint for what I will be creating.</dd>
-                  </dl>
-                  <dl>
-                    <dt class="block-title p-b-15 text-black">Develop <i class="fa fa-code fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">Once I have a clear design mocked up, it is time to start coding. I start by creating all my basic features to make sure the base of my application will work. Back-end frameworks like Ruby on Rails or Node allow for a broad range of data customization, user interface, and dynamic content generation. Front-end frameworks like Bootstrap and React help the development stage be more efficient and more functional than ever before. It is an ongoing process, with new technologies to learn coming out every day.</dd>
-                  </dl>
-                  <dl>
-                    <dt class="block-title text-black p-b-15 ">Launch <i class="fa fa-paper-plane-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">Once the design and development of the project is near completion, it is time to deploy the project. During this stage, I push projects live on a web server or a service like Heroku to get it on the web. The testing during this stage is much more hands on, being able to see any bugs that may come into play once online. Once all is considered and revisions have been implemented I can finally push out version 1.0.</dd>
-                  </dl>
-                  <dl>
-                    <dt class="block-title text-black p-b-15 ">Finish <i class="fa fa-check-square-o fa-2x m-l-10"></i></dt>
-                    <dd class="m-b-30">The best stage during the whole process is finishing what I like to think of as the final product. There's nothing like seeing my initially vague idea become reality. It makes the whole process worth it. I strive to deliver the best product I can, with thoughtful design, bug free development, and extensive iterations to cater to all sorts of users. </dd>
-                  </dl>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <section class="bg-white relative p-b-85 p-t-75 p-b-65 p-t-55">
     </section>
-    <!-- END CONTENT SECTION -->
     <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg">
-      </section>
-    <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-50 p-t-50" style="background-color: yellow;">
       <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle text-center">
-            <div class="text-center" style="text-shadow: 2px 2px grey">
-              <h1 class="text-white text-center p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
+            <div class="text-center" style="text-shadow: 2px 2px black">
+              <h1 class="text-white text-center p-b-80" style="font-weight: 400;">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
               <ul class="text-white text-center p-l-20">
                 <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x" style="text-shadow: 2px 2px grey"></i></li>
                 <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
@@ -340,6 +208,7 @@
         </div>
       </div>
     </section>
+    <!-- BEGIN CONTENT SECTION -->
     <!-- START FOOTER -->
     <section class="p-b-10 p-t-15">
       <div class="container">
