--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
     <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg">
       <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
-          <div class="col-xs-height col-middle text-center">
+          <div class="text-center">
             <div class="text-center" style="text-shadow: 2px 2px black">
-              <h1 class="text-white text-center p-b-80" style="font-weight: 400;">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
+              <h1 class="text-white text-center p-b-80" style="font-weight: 400;">LET'S TALK ABOUT THE NEXT <br><strong>BIG</strong> THING.</h1>
               <ul class="text-white text-center p-l-20">
-                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x" style="text-shadow: 2px 2px grey"></i></li>
-                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
-                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
-                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-40"><i class="social-icon fa fa-github fa-4x" style="text-shadow: 2px 2px grey"></i></a></li>
+                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-3x" style="text-shadow: 2px 2px grey"></i></li>
+                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-35"><i class="social-icon fa fa-linkedin fa-3x" style="text-shadow: 2px 2px grey"></i></a></li>
+                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-35"><i class="social-icon fa fa-angellist fa-3x" style="text-shadow: 2px 2px grey"></i></a></li>
+                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-35"><i class="social-icon fa fa-github fa-3x" style="text-shadow: 2px 2px grey"></i></a></li>
               </ul>
             </div>
           </div>
