Changed index header

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </section>
     <!-- BEGIN JUMBOTRON -->
     <!-- BEGIN HEADER -->
-    <nav class="header bottom bg-header m-b-0 p-b-0 light-solid" data-pages="header" data-pages-autofixed="true">
+    <nav class="header bottom bg-header p-b-10 light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left pull-bottom m-b-0 p-b-0 p-t-20" data-pages-bg-image="assets/images/brush_stroke.png"></div>
+      <div class="demo-brush bottom-left p-t-20" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
@@ -47,9 +47,10 @@
           <!-- .header-inner 
                 Allows to horizontally Align elements to the Center
                  -->
-          <div class="header-inner">
+          <div class="header-inner p-b-10">
             <!-- BEGIN LOGO -->
-            <h3>ALFREDO URDANETA</h3>
+            <h4>ALFREDO URDANETA</h4>
+            <h6><strong>FULL-STACK DEVELOPER</strong></h6>
           </div>
         </div>
         <div class="pull-right">
@@ -123,23 +124,6 @@
               </div>
               <!-- END IMAGE PARRALAX -->
               <!-- BEGIN CONTENT -->
-              <div class="content-layer">
-                <div class="inner full-height">
-                  <div class="container-xs-height full-height">
-                    <div class="col-xs-height col-middle text-left">
-                      <div class="container text-center" style="text-shadow: 1px 1px black;">
-                        <h1 class="m-t-5 text-white">
-                          <strong>Full-Stack Developer</strong>
-                        </h1>
-                        <h4 class="p-b-5 text-white">
-                          <strong>Learn more about me!</strong>
-                        </h4>
-                        <i class="fa fa-arrow-down text-white m-t-10" aria-hidden="true"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
               <!-- END CONTENT -->
             </div>
             <!-- END SLIDE -->
