Fixed mobile view header

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     </section>
     <!-- BEGIN JUMBOTRON -->
     <!-- BEGIN HEADER -->
-    <nav class="header bottom bg-header p-b-10 light-solid" data-pages="header" data-pages-autofixed="true">
+    <nav class="header bottom bg-header light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
       <div class="demo-brush bottom-left p-t-20" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
-        <div class="pull-left">
+        <div class="pull-left m-t-0">
           <!-- .header-inner 
                 Allows to horizontally Align elements to the Center
                  -->
           <div class="header-inner p-b-10">
             <!-- BEGIN LOGO -->
-            <h4>ALFREDO URDANETA</h4>
-            <h6><strong>FULL-STACK DEVELOPER</strong></h6>
+            <h4 class="m-b-0 m-t-0">ALFREDO URDANETA</h4>
+            <h6 class="m-t-5"><strong>FULL-STACK DEVELOPER</strong></h6>
           </div>
         </div>
         <div class="pull-right">
