Added proper margin top for header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                  -->
           <div class="header-inner p-b-10">
             <!-- BEGIN LOGO -->
-            <h4 class="m-b-0 m-t-0">ALFREDO URDANETA</h4>
+            <h4 class="m-b-0 m-t-0" style="margin-top: 3px;">ALFREDO URDANETA</h4>
             <h6 class="m-t-5"><strong>FULL-STACK DEVELOPER</strong></h6>
           </div>
         </div>
